<resources>
    <string name="app_name">RTC Garmentex</string>
    <string name="login_to">Login To RTC Garmentex</string>
    <string name="user_email">User Email</string>
    <string name="user_email_phone">User Email/Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="api_failed">Unable to reach server.</string>
    <string name="sign_out">Sign Out</string>
    <string name="submit">Submit</string>
    <string name="customer">Customer</string>
    <string name="supplier">Supplier</string>
    <string name="sub_party">Sub Party</string>
    <string name="station">Station</string>
    <string name="transport">Transport</string>
    <string name="select">Select</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="select_customer">Select Customer</string>
    <string name="select_transport">Select Transport</string>
    <string name="select_particular">Select Particular</string>
    <string name="select_order">Select Order</string>
    <string name="search">Search</string>
    <string name="order_number">Order Number</string>
    <string name="no_record_found">No record found.</string>
    <string name="not_received">Not Received</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="case_">Case</string>
    <string name="loose">Loose</string>

    <string-array name="empty_spinner">
        <item>@string/select</item>
    </string-array>
    <string-array name="type_spinner">
        <item>@string/select</item>
        <item>@string/case_</item>
        <item>@string/loose</item>
    </string-array>
    <string-array name="order_status_array">
        <item>@string/not_received</item>
        <item>@string/pending</item>
        <item>@string/completed</item>
    </string-array>
</resources>