<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_bg"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.AddOrderActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:visibility="visible"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="60dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/logo_full"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/total_order_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/view_margin_20"
            android:layout_marginVertical="@dimen/view_margin_20">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/view_margin_20">

                    <TextView
                        android:id="@+id/title"
                        style="@style/title_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Add Order"
                        android:textColor="@color/app_red"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!--Customer-->
                    <TextView
                        android:id="@+id/customer_tv"
                        style="@style/normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="@string/customer"
                        app:layout_constraintTop_toBottomOf="@id/title" />

                    <EditText
                        android:id="@+id/customer_sp"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/select_customer"
                        app:layout_constraintTop_toBottomOf="@id/customer_tv" />
                    <!--
                                    <Spinner
                                        android:id="@+id/customer_sp"
                                        style="@style/edit_text"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="6dp"
                                        android:entries="@array/empty_spinner"
                                        android:padding="0dp"
                                        app:layout_constraintTop_toBottomOf="@id/customer_tv" />
                    -->

                    <!--Supplier-->
                    <TextView
                        android:id="@+id/supplier_tv"
                        style="@style/normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="@string/supplier"
                        app:layout_constraintTop_toBottomOf="@id/customer_sp" />

                    <EditText
                        android:id="@+id/supplier_sp"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/select_supplier"
                        app:layout_constraintTop_toBottomOf="@id/supplier_tv" />
                    <!--
                                    <Spinner
                                        android:id="@+id/supplier_sp"
                                        style="@style/edit_text"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="6dp"
                                        android:entries="@array/empty_spinner"
                                        android:padding="0dp"
                                        app:layout_constraintTop_toBottomOf="@id/supplier_tv" />
                    -->

                    <!--Sub Party-->
                    <TextView
                        android:id="@+id/sub_party_tv"
                        style="@style/normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="@string/sub_party"
                        app:layout_constraintTop_toBottomOf="@id/supplier_sp" />

                    <EditText
                        android:id="@+id/sub_party_et"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:maxLines="1"
                        app:layout_constraintTop_toBottomOf="@id/sub_party_tv" />

                    <!--Order Type-->
                    <TextView
                        android:id="@+id/order_type_tv"
                        style="@style/normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="Order Type"
                        app:layout_constraintTop_toBottomOf="@id/sub_party_et" />

                    <EditText
                        android:id="@+id/order_type_et"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:maxLines="1"
                        app:layout_constraintTop_toBottomOf="@id/order_type_tv" />

                    <!--Transport-->
                    <TextView
                        android:id="@+id/transport_tv"
                        style="@style/normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="@string/transport"
                        app:layout_constraintTop_toBottomOf="@id/order_type_et" />

                    <EditText
                        android:id="@+id/transport_et"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/select_transport"
                        app:layout_constraintTop_toBottomOf="@id/transport_tv" />

                    <!--Station-->
                    <TextView
                        android:id="@+id/station_tv"
                        style="@style/normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="Booking"
                        app:layout_constraintTop_toBottomOf="@id/transport_et" />

                    <EditText
                        android:id="@+id/station_et"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        android:maxLength="50"
                        android:maxLines="1"
                        app:layout_constraintTop_toBottomOf="@id/station_tv" />

                    <!--Dispatch Date From-->
                    <TextView
                        android:id="@+id/from_date_tv"
                        style="@style/normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="Dispatch Date From"
                        app:layout_constraintTop_toBottomOf="@id/station_et" />

                    <EditText
                        android:id="@+id/from_date_et"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        app:layout_constraintTop_toBottomOf="@id/from_date_tv" />

                    <!--Dispatch Date To-->
                    <TextView
                        android:id="@+id/to_date_tv"
                        style="@style/normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="Dispatch Date To"
                        app:layout_constraintTop_toBottomOf="@id/from_date_et" />

                    <EditText
                        android:id="@+id/to_date_et"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        app:layout_constraintTop_toBottomOf="@id/to_date_tv" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/particulars_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/to_date_et"
                        tools:itemCount="1"
                        tools:listitem="@layout/row_add_particulars" />

                    <!--
                                    <include
                                        android:id="@+id/add_particulars"
                                        layout="@layout/row_add_particulars"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        app:layout_constraintTop_toBottomOf="@id/to_date_et" />
                    -->

                    <ImageView
                        android:id="@+id/add_iv"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_add_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/particulars_rv"
                        app:tint="@color/teal_200"
                        tools:ignore="ContentDescription" />

                    <!--Remark-->
                    <TextView
                        android:id="@+id/remark_tv"
                        style="@style/normal_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="Remark"
                        app:layout_constraintTop_toBottomOf="@id/add_iv" />

                    <EditText
                        android:id="@+id/remark_et"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="6dp"
                        android:gravity="start"
                        android:importantForAutofill="no"
                        android:inputType="textCapSentences|textMultiLine"
                        android:maxLength="200"
                        android:maxLines="4"
                        app:layout_constraintTop_toBottomOf="@id/remark_tv" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/submit_btn"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/view_margin_20"
                        android:layout_marginTop="@dimen/view_margin_20"
                        android:text="@string/submit"
                        android:theme="@style/ButtonStyle"
                        android:visibility="visible"
                        app:layout_constraintTop_toBottomOf="@id/remark_et" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:indeterminate="true"
            android:indeterminateTint="@color/error_color"
            android:max="100"
            android:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>